# le0-reference

./: .gitignore  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PR_SUMMARY.md  README.md  ROOT_CAUSE_ANALYSIS.md  SINGLE_ENGINE_VERIFICATION.md  VERIFICATION_GUIDE.md  agent_driver.py  compare_runner.py  fixture_loader.py  le0_runner.py  prompt_builder.py  repo_tool.py  requirements.txt  run.sh  run_flow.py  standalone_runner.py  swe_results.json  target_vllm.py
fixtures/helpdesk_ai/: README.md  pyproject.toml
fixtures/helpdesk_ai/docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  RUNBOOK.md  SECURITY.md
fixtures/helpdesk_ai/src/helpdesk_ai/: __init__.py  cli.py  config.py
fixtures/helpdesk_ai/src/helpdesk_ai/domain/: __init__.py  models.py  rules.py  scoring.py
fixtures/helpdesk_ai/src/helpdesk_ai/ingest/: __init__.py  normalize.py  parsers.py  validators.py
fixtures/helpdesk_ai/src/helpdesk_ai/services/: __init__.py  audit.py  escalation.py  routing.py  triage.py
fixtures/helpdesk_ai/src/helpdesk_ai/store/: __init__.py  cache.py  file_store.py  memory_store.py
fixtures/helpdesk_ai/src/helpdesk_ai/utils/: __init__.py  errors.py  ids.py  text.py  time.py
fixtures/helpdesk_ai/src/helpdesk_ai/web/: __init__.py  app.py  handlers.py
fixtures/helpdesk_ai/tests/: test_parsers.py  test_routing.py  test_rules.py  test_scoring.py
flows/: _expanded.json  _expanded_01.json  _expanded_02.json  _expanded_03.json  _expanded_test3.json  fast_three_step.json  prompt_suite.json  three_step.json
scripts/: preflight.py  verify.sh
swe_style_eval/: __init__.py  (+2 more)
(+24 files in other folders)
